--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "simulate-september": "node scripts/simulate-september-2025-clean.cjs simulate",
+    "simulate-october": "node scripts/simulate-october-2025.cjs simulate",
+    "simulate-help": "node scripts/simulate-september-2025-clean.cjs help"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "jspdf": "^3.0.1",
