feat: Implement automatic carryover calculation system with cron job and update reports interface

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/generate-recurring",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/calculate-carryover",
+      "schedule": "0 0 1 * *"
     }
   ]
 }
